# speedtest-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  demo.yml  release.yml  rust.yml  usage_demo.yml
data/: speedtest-config.php.xml  speedtest-servers-static.php.xml  stripped-down-speedtest-config.php.xml
examples/: share_url_generator.rs
src/: cheap_distance.rs  config.rs  distance.rs  error.rs  lib.rs  log.rs  main.rs  speedtest.rs  speedtest_config.rs  speedtest_csv.rs  speedtest_json.rs  speedtest_servers_config.rs
src/speedtest/: faithful.rs  mod.rs
tests/config/: 2020-07-speedtest-config.xml  2021-07-speedtest-config.xml  config.php.xml  servers-static.php.xml
tests/data/: geo-test-speedtest-servers-static.php.xml  speedtest-servers-static.php.xml
