[package]
authors = ["Nelson Chen <nelson@mindflakes.com>"]
description = "Speedtest.net testing utility and crate"
exclude = ["tests/config/*"]
license = "MIT OR Apache-2.0"
name = "speedtest-rs"
repository = "https://github.com/nelsonjchen/speedtest-rs"
version = "0.1.5"
edition = "2021"

[dependencies]
clap = "2.34.0"
chrono = "0.4.38"
env_logger = "0.10.2"
log = {  version = "0.4.22", optional = true }
url = "2.5.2"
mockito = "0.26.0"
md5 = "0.7.0"
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
roxmltree = "0.19.0"
rayon = "1.10.0"
iter-read = "0.3.1"

[dependencies.reqwest]
version = "0.12"
features = ["blocking"]

[features]
# default = ["log"]
rustls-tls = ["reqwest/rustls-tls"]
log = ["dep:log"]
