[package]
authors = ["Nelson Chen <nelson@mindflakes.com>"]
description = "Speedtest.net testing utility and crate"
exclude = ["tests/config/*"]
license = "MIT OR Apache-2.0"
name = "speedtest-rs"
repository = "https://github.com/nelsonjchen/speedtest-rs"
version = "0.1.5"
edition = "2021"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
chrono = "0.4.38"
env_logger = "0.11.4"
log = {  version = "0.4.22", optional = true }
url = "2.5.2"
mockito = "1.4.0"
md5 = "0.7.0"
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
roxmltree = "0.20.0"
rayon = "1.10.0"
iter-read = "1.0.1"

[dependencies.reqwest]
version = "0.12"
features = ["blocking"]

[features]
# default = ["log"]
rustls-tls = ["reqwest/rustls-tls"]
log = ["dep:log"]
