[package]
name = "speedtest-rs"
description = "Speedtest.net testing utility and crate"
authors = ["Nelson Chen <nelson@mindflakes.com>"]
exclude = ["tests/config/*"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nelsonjchen/speedtest-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"

[lib]
name = "speedtest_rs"

[[bin]]
name = "speedtest-rs"

[dependencies]
clap = { version = "<=4.4", features = ["derive"] }
chrono = "0.4.38"
log = { version = "0.4.22", optional = true }
url = "2.5.2"
mockito = "1.5.0"
md5 = "0.7.0"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
roxmltree = "0.20.0"
rayon = "1.10.0"
iter-read = "1.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

[dependencies.reqwest]
version = "0.12"
features = ["blocking"]

[features]
rustls-tls = ["reqwest/rustls-tls"]
